fix padding on mobile version

--- a/css/cover.css
+++ b/css/cover.css
@@ -126,7 +126,8 @@ body {
  */
 
 .cover {
-  padding: 20px 20px;
+  /* top, right, bottom, left */
+  padding: 0 20px 20px;
 }
 .cover .btn-lg {
   padding: 10px 20px;
